# effect

./: .clippy.toml  .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .sqlfluff  Cargo.toml  Makefile  docker-compose.yml  lefthook.yml  rustfmt.toml
applications/event-processor/: Cargo.toml
contexts/ai-integration/: Cargo.toml
services/algorithm-service/: Cargo.toml  Dockerfile
services/algorithm-service/migrations/: 20250802_000001_create_algorithm_tables.sql
services/algorithm-service/src/: config.rs
services/algorithm_service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs
services/algorithm_service/.sqlx/: query-04f9430b8a64c2331c4ab27c58361ee8146c2dee4d3d426ea4d40dd04ba778cd.json  query-0ee2a1df9fd6445f05d20b396041c723200de4cf0b9777e74980f74ce1926938.json  query-1a27b31a3737188b566aad23f1caf4d6fe9b7c0a2f1fc227061797a7cb6bd4b0.json  query-2da511897f13f8fc0190f9a7f119f79c59ea3ebcbc996daa553dc24826171596.json  query-321d445b00bf021fa58d42c74facf8f011d02f735602dd4bdf061dd1acdfca56.json  query-3983445b7f2ee86895c2da3ba5fd02eb8569c1ba1c286384cb508715b51f49be.json  query-3e0b1be0fa9bc363940394a2e6b4f995ea1971df578d35c80ffdf94bddfda2e9.json  query-4543c130d7d9ec4210f0ab65af92c53bc79710738058b19947da9a9d73c2724c.json  query-46f416a8bd4be3b1ecf905fb10305b47f6de49d3b64faec7d944109b6189ff42.json  query-51ef84fae4681082a631724d9ffe24daf6280e660fb4c48f8f87dd40e631c586.json  query-541d7b09b41504664cd78a81a793bdbaf900d40796a38231c9ea1148a906ce8c.json  query-54a267f89474573fe7f5e010132ebb0c8a5059b8e331cb469b65dd8d0f3fbb31.json  query-63b3b7b038a005daa637f77c5783931de6a33bc9196b42eabac69d09b66c687b.json  query-69fb07d936263d4b5aff8985b35cab11eeed13a2f8254b4edb731990cbc3d48b.json  query-740e0dbcbe087b4c323d87a64d0ac358bcf6d32fdffd1260063c62894ee65e4c.json  query-8737719ec27569fee215b9f1e64a3c6d53463639cf70d2160172ddb7e197b06e.json  query-8a275ab95f7060ffc75a76cef498c13a5560f3a09acecc183d8071e556abf498.json  query-9b75dd727c9b1d8dcd7e73108b54420631d4eb3dca48919ec020b75f96f95da6.json  query-a2696a5d3bff9c9701956f928ac92c322857d8a2fa62f96a1f4803d2a22b97d7.json  query-a76959593695a148a87f0d8a923f3be7d961b4fb229d9117bf84046f6e4437a6.json  query-d26289b6eec2c7a0dde47779c2f9e793be4814c47c26f34002a02ac172fe7d0d.json  query-e66bf1999fe47457bd754d18f08ff8147e63ae408b955c0dcb07116b1e8b691b.json  query-f09bf5f33c399a1ca417eabf7d10c9c8efc01751a6daecb41e93315cd7b4d34e.json  query-ff6722c6cc89fbfba40dc7c8c4ef0b696026f4ed57d21d0db74ff80ff079b653.json
services/algorithm_service/migrations/: 20250811_000001_add_learning_item_states.sql
services/algorithm_service/src/: infrastructure.rs  lib.rs  main.rs  proto.rs  server.rs
services/domain_events_service/: Cargo.toml  Dockerfile  build.rs
services/domain_events_service/.sqlx/: query-ab2d00f985b7a8c4e6f171344ceb1e6d3ac9a8db37665c46d0f397aa91c20943.json  query-c613c99a98972bcb527e9955b09d2df8e339b90edb201d76ab678527af54aaf3.json  query-d2f722e8bf3c5424f7cb0813fb08559494e788f92edf83c1e5a755911833fb3e.json  query-e5fb6a7d4d82c39002b49c59862bd1a5ed9a33748659b1f903bc602570917746.json  query-f94700047f839004c50d241e7f53b7eeae40885a4666894cfbe6e435d6d74f87.json  query-f98ee7f32bd08e37e60d34350df6ebe2ac6459409620fecc6f7b974ed4335e3e.json
services/domain_events_service/migrations/: 001_create_schema_registry.sql
services/domain_events_service/src/: client.rs  config.rs  grpc.rs  lib.rs  main.rs  registry.rs  validator.rs
services/event_processor/: .dockerignore  Cargo.toml  Dockerfile
services/event_store_service/: Cargo.toml  Dockerfile  build.rs
services/event_store_service/migrations/: 20250809_000001_create_event_store_tables.sql
services/event_store_service/proto/: event_store.proto
services/event_store_service/src/: config.rs  event_bus.rs  grpc.rs  main.rs  repository.rs
services/learning_service/: .env.example  Cargo.toml  Dockerfile
services/learning_service/src/: config.rs  lib.rs  main.rs
services/progress-service/: .dockerignore  Cargo.toml  Dockerfile
services/progress-service/migrations/: 20250802_000001_create_progress_tables.sql
services/progress_command_service/: Cargo.toml  Dockerfile
services/progress_command_service/.sqlx/: query-5d97ededbf6687098568d6531c0529abd38b34878524aae0270cd65371a359c1.json  query-60a32f2cb31e30712ccd9110369d7da60bb0359f49576ed121caf58b0e95a708.json  query-7d81866a5560d91df34a14ab414e3c213b03a70d29b9151dcb33b029a077a7fa.json  query-b02441e693b9c11cc3168268f32f0d2fd836d14a39cc520f39f11773e43b1078.json  query-bb0757632c776f8e3b4be8f09bbf26b84ff55c3bffc33823f826940dbfaf4cf4.json
services/progress_command_service/migrations/: 001_create_progress_tables.sql  20250802_000001_create_progress_tables.sql
services/progress_command_service/src/: application.rs  config.rs  domain.rs  error.rs  lib.rs  main.rs  server.rs
services/progress_projection_service/: Cargo.toml  Dockerfile
services/progress_projection_service/.sqlx/: query-4cf1590c7fcea5dd7e239e87cfce633c858edaec734a72fe0a39bfb573715ac4.json  query-5fb3f984b80ddc9ee1a6ebefdf9f092af2f1bcba90953eaab90b28026cdc70cd.json  query-6c37933c7590b0e5cbaab8a38b6220527c79b811ea30b01894a2b01b9e9faeca.json  (+12 more)
services/progress_projection_service/src/: config.rs  (+7 more)
services/progress_query_service/: Cargo.toml  Dockerfile
services/saga-orchestrator/: Cargo.toml
services/user-service/: .dockerignore  Cargo.toml  build.rs
services/user_service/: .env.example  Cargo.toml  Dockerfile
services/vocabulary-service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs
services/vocabulary_command_service/: Cargo.toml  Dockerfile  build.rs
services/vocabulary_projection_service/: Cargo.toml  Dockerfile  sqlx-data.json
services/vocabulary_query_service/: Cargo.toml  Dockerfile  build.rs
services/vocabulary_search_service/: Cargo.toml  Dockerfile  build.rs
services/vocabulary_service/: Cargo.toml  Dockerfile
shared/common-types/: Cargo.toml
shared/domain_events/: Cargo.toml  build.rs
shared/infrastructure/: Cargo.toml
shared/kernel/: Cargo.toml  build.rs
(+662 files in other folders)
