[workspace]
members = [
  # Shared libraries
  "shared/common-types",
  "shared/domain-events",
  "shared/infrastructure",

  # Microservices
  "services/learning-service",
  "services/algorithm-service",
  "services/vocabulary-service",
  "services/user-service",
  "services/progress-service",
  "services/ai-service",
  "services/api-gateway",
  "services/event-processor",
  "services/saga-orchestrator",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP/GraphQL
axum = "0.8"
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }

# UUID
uuid = { version = "1.17", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# gRPC
tonic = "0.14.0"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Testing
mockall = "0.13"
tokio-test = "0.4.4"

# Environment variables
dotenvy = "0.15"
config = { version = "0.15.13", features = ["toml"] }

# Google Cloud
google-cloud-pubsub = "0.30"
google-cloud-googleapis = "0.16.1"

# Redis
redis = { version = "0.32.4", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }

[workspace.lints.clippy]
# エラーレベルのリント
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
mem_forget = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"

# 警告レベルのリント（優先度を設定）
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
use_self = "warn"
missing_const_for_fn = "warn"
inefficient_to_string = "warn"
unnecessary_wraps = "warn"

# 開発初期段階では警告として扱う
too_many_arguments = "warn"
type_complexity = "warn"
module_name_repetitions = "warn"
must_use_candidate = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
# パッケージメタデータは後で追加
cargo_common_metadata = "allow"
# 依存関係の複数バージョンは許可（workspace で管理）
# tracing-subscriber の env-filter が古い regex-automata を使用するため
# 上流の更新を待つ（実害なし）
multiple_crate_versions = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
