[package]
name = "event-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
common-types = { path = "../../shared/common-types" }
domain-events = { path = "../../shared/domain-events" }
infrastructure = { path = "../../shared/infrastructure" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
