[package]
name = "algorithm_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "algorithm_service"
path = "src/main.rs"

[dependencies]
shared_kernel = { path = "../../shared/kernel", features = ["sqlx"] }
domain_events_service = { path = "../domain_events_service" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["uuid", "chrono", "macros"] }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
approx = "0.5"

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
