[package]
name = "domain_events_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Database
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }

# Shared
shared_kernel = { path = "../../shared/kernel" }
shared_telemetry = { path = "../../shared/cross_cutting/telemetry" }
shared_database = { path = "../../shared/infrastructure/database" }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }
protobuf-src = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
