[package]
name = "event_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_kernel = { path = "../../shared/kernel", features = ["sqlx"] }
domain_events = { path = "../../shared/domain_events" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
