[package]
name = "event_store_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Shared
shared_kernel = { path = "../../shared/kernel" }
shared_database = { path = "../../shared/infrastructure/database" }
shared_telemetry = { path = "../../shared/cross_cutting/telemetry" }
shared_config = { path = "../../shared/cross_cutting/config" }

[build-dependencies]
tonic-prost-build = { workspace = true }
