[package]
name = "learning_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "learning_service"
path = "src/main.rs"

[dependencies]
shared_kernel = { path = "../../shared/kernel", features = ["sqlx"] }
domain_events = { path = "../../shared/domain_events" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[lints]
workspace = true
