[package]
name = "progress-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "progress-service"
path = "src/main.rs"

[dependencies]
shared-kernel = { path = "../../shared/kernel", features = ["sqlx"] }
domain-events = { path = "../../shared/domain-events" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[lints]
workspace = true
