[package]
name = "progress_command_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Event Bus
google-cloud-pubsub = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# UUID and DateTime
uuid = { workspace = true }
chrono = { workspace = true }

# Cache
redis = { workspace = true }

# Shared
shared_kernel = { path = "../../shared/kernel" }
shared_progress_context = { path = "../../shared/contexts/progress" }
