[package]
name = "progress_query_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Utilities
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Environment
dotenvy = { workspace = true }
config = { workspace = true }

# Shared
shared_kernel = { path = "../../shared/kernel" }
shared_progress_context = { path = "../../shared/contexts/progress" }

[dev-dependencies]
mockall = { workspace = true }
