[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
# Shared modules from workspace
common-types = { path = "../../shared/common-types" }
domain-events = { path = "../../shared/domain-events" }
infrastructure = { path = "../../shared/infrastructure" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }

# Service specific dependencies
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
