[package]
name = "vocabulary-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vocabulary-service"
path = "src/main.rs"

[dependencies]
common-types = { path = "../../shared/common-types" }
domain-events = { path = "../../shared/domain-events" }
infrastructure = { path = "../../shared/infrastructure" }
shared-repository = { path = "../../shared/infrastructure/repository" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
