[package]
name = "vocabulary_command_service"
version = "0.1.0"
edition = "2024"
authors = ["Effect Team"]

[dependencies]
# 共有クレート
shared_kernel = { path = "../../shared/kernel" }
shared_vocabulary_context = { path = "../../shared/contexts/vocabulary" }
shared_error = { path = "../../shared/cross_cutting/error" }
shared_database = { path = "../../shared/infrastructure/database" }
shared_repository = { path = "../../shared/infrastructure/repository" }
shared_event_store = { path = "../../shared/infrastructure/event_store" }
shared_event_bus = { path = "../../shared/infrastructure/event_bus" }
shared_telemetry = { path = "../../shared/cross_cutting/telemetry" }
shared_config = { path = "../../shared/cross_cutting/config" }

# 非同期ランタイム
tokio = { workspace = true, features = ["full"] }

# Web フレームワーク
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# シリアライゼーション
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# ロギング・トレーシング
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# エラーハンドリング
thiserror = { workspace = true }
anyhow = { workspace = true }

# その他
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }

[[bin]]
name = "vocabulary_command_service"
path = "src/main.rs"
