[package]
name = "vocabulary_command_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vocabulary_command_service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Configuration
config = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Shared
shared_kernel = { path = "../../shared/kernel" }
shared_vocabulary_context = { path = "../../shared/contexts/vocabulary" }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }
protobuf-src = { workspace = true }

[dev-dependencies]
# Mocking
mockall = { workspace = true }
