[package]
name = "vocabulary_search_service"
version = "0.1.0"
edition = "2024"
authors = ["Effect Team"]

[dependencies]
# 共有クレート
shared_kernel = { path = "../../shared/kernel" }
shared_vocabulary_context = { path = "../../shared/contexts/vocabulary" }
shared_error = { path = "../../shared/cross_cutting/error" }
shared_database = { path = "../../shared/infrastructure/database" }
shared_repository = { path = "../../shared/infrastructure/repository" }
shared_telemetry = { path = "../../shared/cross_cutting/telemetry" }
shared_config = { path = "../../shared/cross_cutting/config" }
shared_cache = { path = "../../shared/cross_cutting/cache" }

# 非同期ランタイム
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Web フレームワーク
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# データベース
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }

# Redis
redis = { workspace = true, features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }

# シリアライゼーション
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# ロギング・トレーシング
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# エラーハンドリング
thiserror = { workspace = true }

# その他
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Search engine (独自依存)
meilisearch-sdk = "0.29.1"

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }

[[bin]]
name = "vocabulary_search_service"
path = "src/main.rs"
