[package]
name = "vocabulary_search_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Search engine
meilisearch-sdk = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }

# Shared
shared_kernel = { path = "../../shared/kernel" }
shared_vocabulary_context = { path = "../../shared/contexts/vocabulary" }
