[package]
name = "vocabulary_service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vocabulary_service"
path = "src/main.rs"

[dependencies]
shared_kernel = { path = "../../shared/kernel" }
shared_vocabulary_context = { path = "../../shared/contexts/vocabulary" }
domain_events = { path = "../../shared/domain_events" }                   # 移行中は一時的に保持
shared_cache = { path = "../../shared/cross_cutting/cache" }
shared_repository = { path = "../../shared/infrastructure/repository" }
shared_database = { path = "../../shared/infrastructure/database" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
