[package]
name = "common-types"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-kernel = { path = "../kernel" }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx", "uuid/serde", "chrono/serde"]

[lints]
workspace = true
