[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain-events = { path = "../domain-events" }
google-cloud-pubsub = { workspace = true }
google-cloud-googleapis = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }

[lints]
workspace = true
