[package]
name = "shared_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
  "chrono",
  "uuid",
], optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]
