[package]
name = "shared_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]

[build-dependencies]
tonic-prost-build = { workspace = true }
