[package]
name = "shared_learning_context"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_kernel = { path = "../../kernel" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
