[package]
name = "shared_vocabulary_context"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_kernel = { path = "../../kernel" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
