[package]
name = "shared_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
